k8s-cluster-configuration/applications/a2w-preview/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a2w-preview
  namespace: a2w-preview
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: a2w-preview
  template:
    metadata:
      labels:
        app: a2w-preview
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: website
          image: registry.k6nis.dev/a2w/landing-preview:3bbe275c1526f08b885507bf280f8b0521ce50d5
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
