k8s-cluster-configuration/applications/a2w-preview/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-preview
  namespace: a2w-preview
spec:
  selector:
    app: a2w-preview
  ports:
    - name: http
      port: 80
      targetPort: http
