k8s-cluster-configuration/applications/a2w-preview/base/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: a2w-preview
  namespace: a2w-preview
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "3b715c17-d498-491b-9a1a-98aa04e45cb6.a2w.io"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: 3b715c17-d498-491b-9a1a-98aa04e45cb6.a2w.io
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: a2w-preview-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2w-preview
  namespace: a2w-preview
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: a2w-preview
      namespace: a2w-preview
  hostnames:
    - 3b715c17-d498-491b-9a1a-98aa04e45cb6.a2w.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Robots-Tag
                value: "noindex, nofollow"
      backendRefs:
        - group: ''
          kind: Service
          name: a2w-preview
          port: 80
          weight: 1
